--- a/学习笔记.md
+++ b/学习笔记.md
@@ -1,3 +1,7 @@
+mvn clean install -Dcheckstyle.skip=true  -Dmaven.test.skip=true
+
+
+
 ########################消费者&&生产者################################
 processQueueTable  
 ConcurrentMap<MessageQueue, ProcessQueue>
